vertx-istio-security-greeting/src/main/fabric8/deployment.yaml
apiVersion: v1
kind: Deployment
spec:
  template:
    spec:
      serviceAccountName: sa-greeting
