vertx-istio-security-greeting/src/main/fabric8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${project.artifactId}
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ${project.artifactId}
          servicePort: 8080
      - path: /api/greeting
        backend:
          serviceName: ${project.artifactId}
          servicePort: 8080
